--- a/HACK-6.1-305HACKNOV-0.html
+++ b/HACK-6.1-305HACKNOV-0.html
@@ -100,7 +100,7 @@
       305 Veterans &amp; DefenseTech Hack
     </p>
     <h1 class="text-3xl sm:text-4xl font-extrabold tracking-tight text-gray-900">
-      November 2025 Hackathon — Two Sessions
+      305 Hackathon | Edition November 2025 — Two Sessions
     </h1>
     <p class="mt-2 text-gray-600 max-w-2xl">
       Online Hybrid/Remote: <strong>Nov 7–15</strong> · In-Person: <strong>Nov 15</strong> (9 AM–9 PM ET). RSVP on Bevy for email updates. Live demos required.
@@ -131,7 +131,7 @@
         </div>
         <p>Kickoff Nov 7 and keep building through Nov 15 with mentor hours, checkpoints, and async support.</p>
         <div class="row">
-          <a class="btn" href="session-hybrid.html">Online Session Details</a>
+          <a class="btn" href="HACK-6.1-305HACKNOV-1.html">Online Session Details</a>
           <!-- <a class="btn alt" href="#" target="_blank" rel="noopener">Register</a>
           <a class="btn alt" href="#" target="_blank" rel="noopener">RSVP on Bevy</a>
           <a class="btn alt" href="#" target="_blank" rel="noopener">Participant Perks (APIs &amp; Subs)</a> -->
@@ -149,7 +149,7 @@
         </div>
         <p>One-day onsite sprint with workshops, mentors, judging, and demos.</p>
         <div class="row">
-          <a class="btn" href="session-inperson.html">In-Person Session Details</a>
+          <a class="btn" href="HACK-6.1-305HACKNOV-2.html">In-Person Session Details</a>
           <!-- <a class="btn alt" href="#" target="_blank" rel="noopener">Register</a>
           <a class="btn alt" href="#" target="_blank" rel="noopener">RSVP on Bevy</a>
           <a class="btn alt" href="#" target="_blank" rel="noopener">Participant Perks (APIs &amp; Subs)</a> -->
