--- a/hackuniversity-hackathons.html
+++ b/hackuniversity-hackathons.html
@@ -1061,7 +1061,7 @@
         </div>
         <h3>Hackathon Registration</h3>
         <p>Register for upcoming hackathons and secure your spot. Join us in building amazing projects!</p>
-        <a href="#" class="card-button">Register Now</a>
+        <a href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html" class="card-button">Register Now</a>
       </div>
 
       <div class="card">
@@ -1070,7 +1070,7 @@
         </div>
         <h3>Discord Community</h3>
         <p>Join our Discord server to connect with fellow hackers, get support, and stay updated on events.</p>
-        <a href="#" class="card-button" target="_blank" rel="noopener">Join Discord</a>
+        <a href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform-1.html" class="card-button" target="_blank" rel="noopener">Join Discord</a>
       </div>
 
       <div class="card">
@@ -1079,7 +1079,7 @@
         </div>
         <h3>Hack University GroupMe</h3>
         <p>Stay connected with the Hack University community through our GroupMe for quick updates and discussions.</p>
-        <a href="#" class="card-button" target="_blank" rel="noopener">Join GroupMe</a>
+        <a href="https://hackuniversityplatforms.vercel.app/" class="card-button" target="_blank" rel="noopener">Join GroupMe</a>
       </div>
 
       <div class="card">
@@ -1088,7 +1088,7 @@
         </div>
         <h3>Hack University IG</h3>
         <p>Follow us on Instagram for event highlights, behind-the-scenes content, and community updates.</p>
-        <a href="#" class="card-button" target="_blank" rel="noopener">Follow on IG</a>
+        <a href="https://hackuniversityplatforms.vercel.app/" class="card-button" target="_blank" rel="noopener">Follow on IG</a>
       </div>
 
       <div class="card">
@@ -1097,7 +1097,7 @@
         </div>
         <h3>Google Calendar</h3>
         <p>Add our events to your Google Calendar and never miss a hackathon, workshop, or meeting.</p>
-        <a href="#" class="card-button" target="_blank" rel="noopener">View Calendar</a>
+        <a href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html" class="card-button" target="_blank" rel="noopener">View Calendar</a>
       </div>
     </div>
 
