--- a/hack2.html
+++ b/hack2.html
@@ -300,9 +300,11 @@
         <!-- Navigation Links -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link" href="hackathons.html">Hackathons</a></li>
-                <li class="nav-item"><a class="nav-link active" href="hacks-toolkit.html" aria-current="page">Hacks Toolkit</a></li>
-            </ul>
+                    <li class="nav-item"><a class="nav-link" href="https://codecrunchglobal.vercel.app/hackathons.html">Hackathons</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://codecrunchglobal.vercel.app/hacks-toolkit.html">Hacks Toolkit</a></li>
+            
+            
+              </ul>
         </div>
     </div>
 </nav>
@@ -310,8 +312,9 @@
   <!-- Header -->
   <header class="container">
     <nav aria-label="breadcrumb" class="breadcrumbs">
-      <a href="index.html" class="breadcrumb-link">Home</a> / 
-      <a href="hackathons.html" class="breadcrumb-link">Hacks Toolkit</a> / 
+      <a href="ihttps://codecrunchglobal.vercel.app/hackathons.html" class="breadcrumb-link">Hack University</a> / 
+      <a href="ihttps://codecrunchglobal.vercel.app/hackathons.html" class="breadcrumb-link">Hackathons</a> / 
+      <a href="https://codecrunchglobal.vercel.app/hacks-toolkit.html" class="breadcrumb-link">Hacks Toolkit</a> / 
       <span>Hackathon Code of Conduct</span>
     </nav>
     <h1>Code of Conduct</h1>
