--- a/hackuniversity-onestopform.html
+++ b/hackuniversity-onestopform.html
@@ -216,7 +216,7 @@
 
 
       <!-- TODO: Replace # with your real GroupMe link -->
-      <a class="ql-btn ql-groupme" href="#" target="_blank" rel="noopener">
+      <a class="ql-btn ql-groupme" href="https://hackuniversityplatforms.vercel.app/" target="_blank" rel="noopener">
         <i class="fa-solid fa-message"></i><span>Join GroupMe Group Chat</span>
       </a>
 
