--- a/hack3-judging-criteria.html
+++ b/hack3-judging-criteria.html
@@ -618,8 +618,8 @@ body {
             <!-- Navigation Links -->
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="hackathons.html">Hackathons</a></li>
-                    <li class="nav-item"><a class="nav-link" href="hacks-toolkit.html">Hacks Toolkit</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://codecrunchglobal.vercel.app/hackathons.html">Hackathons</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://codecrunchglobal.vercel.app/hacks-toolkit.html">Hacks Toolkit</a></li>
 
                 </ul>
             </div>
