--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -250,7 +250,7 @@
     </a>
 
     <!-- Hackathons -->
-    <a href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html" target="_blank"
+    <a href="https://codecrunchglobal.vercel.app/hackathons.html" target="_blank"
        class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden"
        aria-label="Register for upcoming hackathons. Ages 16 and up.">
       Hackathons
