--- a/hackuniversity-hackathons.html
+++ b/hackuniversity-hackathons.html
@@ -466,7 +466,7 @@
 
     /* ---------- Hackathon data ---------- */
     const hackathons = [
-      { name: '🪖 305 Hackathon | Edition November 2025 — Veterans &amp; DefenseTech Hack', startDate: '2025-11-07', endDate: '2025-11-15', modality: 'Two Sessions Online: Session A (Synchronous) Session B — In-Person', url: 'https://305hacknov2025.vercel.app/' },
+      { name: '🪖 305 Hackathon | Edition November 2025 — Theme: Veterans &amp; DefenseTech Hack', startDate: '2025-11-07', endDate: '2025-11-15', modality: 'two sessions', url: 'https://305hacknov2025.vercel.app/' },
       { name: '🏙️ 305 Hackathon: Fall 2025 edition', startDate: '2025-09-19', endDate: '2025-09-21', modality: 'in-person', url: 'https://305hackfall2025.vercel.app' },
       { name: '👑 EmpowHER Hackathon 2025', startDate: '2025-10-13', endDate: '2025-10-20', modality: 'virtual', url: 'https://empowherhack2025.vercel.app/' },
       { name: '👑 EmpowHER HackDAY 2025', startDate: '2025-10-18', endDate: '2025-10-18', modality: 'in-person', url: 'https://empowherhackdayfall25.vercel.app/' },
@@ -491,6 +491,7 @@
         case 'virtual': return 'mode-virtual';
         case 'in-person': return 'mode-person';
         case 'hybrid': return 'mode-hybrid';
+        case 'two sessions': return 'mode-two-sessions';
         case 'tbd': return 'mode-tbd';
         default: return 'mode-tbd';
       }
@@ -500,6 +501,7 @@
         case 'in-person': return 'In Person';
         case 'virtual': return 'Virtual';
         case 'hybrid': return 'Hybrid';
+        case 'two sessions': return 'Two Sessions: Session A (Synchronous) & Session B (In-Person)';
         case 'tbd': return 'TBD';
         default: return 'TBD';
       }
