--- a/hackuniversity-hackathons.html
+++ b/hackuniversity-hackathons.html
@@ -466,7 +466,19 @@
 
     /* ---------- Hackathon data ---------- */
     const hackathons = [
-      { name: '🪖 305 Hackathon | Edition November 2025 — Theme: Veterans &amp; DefenseTech Hack', startDate: '2025-11-07', endDate: '2025-11-15', modality: 'two sessions', url: 'https://305hacknov2025.vercel.app/' },
+      { 
+        name: '🪖 305 Hackathon | Edition November 2025', 
+        theme: 'Veterans & DefenseTech Hack',
+        startDate: '2025-11-07', 
+        endDate: '2025-11-15', 
+        // Modality updated to reflect new structure
+        modality: 'hybrid', 
+        modalityDescription: 'Two Sessions: Online (Synchronous) & In-Person', // New field for detailed text
+        url: 'https://305hacknov2025.vercel.app/' 
+      },
+    
+    
+    { name: '🪖 305 Hackathon | Edition November 2025 — Theme: Veterans &amp; DefenseTech Hack', startDate: '2025-11-07', endDate: '2025-11-15', modality: 'two sessions', url: 'https://305hacknov2025.vercel.app/' },
       { name: '🏙️ 305 Hackathon: Fall 2025 edition', startDate: '2025-09-19', endDate: '2025-09-21', modality: 'in-person', url: 'https://305hackfall2025.vercel.app' },
       { name: '👑 EmpowHER Hackathon 2025', startDate: '2025-10-13', endDate: '2025-10-20', modality: 'virtual', url: 'https://empowherhack2025.vercel.app/' },
       { name: '👑 EmpowHER HackDAY 2025', startDate: '2025-10-18', endDate: '2025-10-18', modality: 'in-person', url: 'https://empowherhackdayfall25.vercel.app/' },
